--- a/js/program.html
+++ b/js/program.html
@@ -2,8 +2,11 @@
 	<body>
 		<h1 class="democlass">Hello World</h1>
 		<pre>
-			<script src="function3.js">
-			</script>
-		<pre>
+			<script src="function.js"></script>
+			<script src="function2.js"></script>
+			<script src="function3.js"></script>
+			<script src="function4.js"></script>
+		</pre>
+
 	</body>
 </html>
